[package]
name = "dwarf_dis"
version = "0.1.0"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dwarf_dis"
path = "src/lib.rs"

[[bin]]
name = "dwarf-dis-test"
path = "src/bin.rs"

[dependencies]
flexi_logger = "0.15"
log = "0.4"
nano-leb128 = "0.1"
